[gd_scene load_steps=34 format=3 uid="uid://ijho3gmbvbmx"]

[ext_resource type="Script" uid="uid://dh4aah4psqov3" path="res://Common/World/RocketObject/Scripts/Rocket.gd" id="2"]
[ext_resource type="AudioStream" uid="uid://tihhnol4duf5" path="res://Common/World/RocketObject/Sounds/RocketExplodeLowFuel.wav" id="4_o3vb1"]
[ext_resource type="AudioStream" uid="uid://bkmjmi5godufv" path="res://Common/World/RocketObject/Sounds/Rocket.wav" id="5"]
[ext_resource type="AudioStream" uid="uid://eh5ss2r6fpm5" path="res://Common/World/RocketObject/Sounds/RocketExplodeMediumFuel.wav" id="5_x3o3d"]
[ext_resource type="AudioStream" uid="uid://cqi8ha02ieacf" path="res://Common/World/RocketObject/Sounds/RocketStart.wav" id="6"]
[ext_resource type="AudioStream" uid="uid://ccqdawhlsfshp" path="res://Common/World/RocketObject/Sounds/RocketExplodeHigh.wav" id="6_xxx01"]
[ext_resource type="Texture2D" uid="uid://doevbku6k7jq2" path="res://Common/World/Sprites/Moon.png" id="7_om7e8"]
[ext_resource type="Texture2D" uid="uid://b20iqhv62jxku" path="res://Common/World/Sprites/Parralax.png" id="8_pm1ds"]
[ext_resource type="AudioStream" uid="uid://b4gs4b3nefk3k" path="res://Common/World/RocketObject/Sounds/RocketCutscene2.wav" id="9_75gv5"]
[ext_resource type="AudioStream" uid="uid://c4b643xbmjp8o" path="res://Common/World/RocketObject/Sounds/RocketCutscene3.wav" id="9_r2cai"]
[ext_resource type="Texture2D" uid="uid://db68xp6s451mg" path="res://Common/World/Sprites/LilMouser.png" id="9_u5xov"]
[ext_resource type="Texture2D" uid="uid://d0ts1d5f1kd8p" path="res://Common/World/Sprites/LittleMouserFlag.png" id="10_bujel"]
[ext_resource type="AudioStream" uid="uid://bg4to1g3sur6v" path="res://Common/World/RocketObject/Sounds/RocketCutscene1.wav" id="10_r2cai"]
[ext_resource type="AudioStream" uid="uid://bw72xqto72rsn" path="res://Common/World/RocketObject/Sounds/RocketLand.wav" id="12_mlpri"]
[ext_resource type="AudioStream" uid="uid://ciis3m73kwmho" path="res://Common/World/Sounds/MouserExit.wav" id="14_vssyy"]
[ext_resource type="AudioStream" uid="uid://b1ytkubxlrqvr" path="res://Common/EndScene/Sounds/VictoryTheme.wav" id="15_6lb6g"]
[ext_resource type="AudioStream" uid="uid://dgat6yf7bm1un" path="res://Common/World/Sounds/FlagPlant.wav" id="17_3tcmy"]

[sub_resource type="CapsuleShape2D" id="1"]
radius = 29.8885
height = 59.777

[sub_resource type="ParticleProcessMaterial" id="2"]
lifetime_randomness = 1.0
particle_flag_disable_z = true
emission_shape_offset = Vector3(0, 1.025, 0)
emission_shape = 2
emission_sphere_radius = 8.0
spread = 160.0
initial_velocity_min = 4.0
initial_velocity_max = 4.0
radial_velocity_min = 1.0
radial_velocity_max = 25.0
scale_min = 3.0
scale_max = 6.0

[sub_resource type="CapsuleShape2D" id="3"]
radius = 29.8885
height = 59.777

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_giiy7"]
lifetime_randomness = 0.35
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 7.25
inherit_velocity_ratio = 0.36
radial_velocity_min = 397.85
radial_velocity_max = 397.85
gravity = Vector3(0, 0, 0)
scale_max = 4.0
color = Color(1, 0, 0, 1)
hue_variation_min = -0.15
hue_variation_max = 0.15

[sub_resource type="AtlasTexture" id="AtlasTexture_3tcmy"]
atlas = ExtResource("10_bujel")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_xyppk"]
atlas = ExtResource("10_bujel")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_yb0rn"]
atlas = ExtResource("10_bujel")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ddyry"]
atlas = ExtResource("10_bujel")
region = Rect2(48, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_qyk71"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3tcmy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xyppk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yb0rn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ddyry")
}],
"loop": true,
"name": &"default",
"speed": 8.0
}]

[sub_resource type="Animation" id="Animation_om7e8"]
resource_name = "MoonLanding"
length = 20.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Moon:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(3, 6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(4, -1200), Vector2(4, 300)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../TopSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.133333, 0.266667, 0.4, 0.533333, 0.766667, 0.966667, 1.03333, 1.43333, 1.86667, 2.2, 2.63333, 3.06667, 3.3),
"transitions": PackedFloat32Array(3.03143, 3.03143, 3.03143, 3.03143, 3.03143, 3.03143, 3.03143, 3.03143, 3.03143, 3.03143, 3.03143, 3.03143, 3.03143, 3.03143),
"update": 0,
"values": [Vector2(0, -38), Vector2(-7, -38), Vector2(7, -38), Vector2(-14, -38), Vector2(4, -38), Vector2(-7, -38), Vector2(7, -38), Vector2(-14, -38), Vector2(4, -38), Vector2(-7, -38), Vector2(7, -38), Vector2(-14, -38), Vector2(8, -38), Vector2(0, -38)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../BodySprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.133333, 0.266667, 0.4, 0.533333, 0.766667, 0.966667, 1.03333, 1.43333, 1.86667, 2.2, 2.63333, 3.06667, 3.3),
"transitions": PackedFloat32Array(3.03143, 3.03143, 3.03143, 3.03143, 3.03143, 3.03143, 3.03143, 3.03143, 3.03143, 3.03143, 3.03143, 3.03143, 3.03143, 3.03143),
"update": 0,
"values": [Vector2(0, -2), Vector2(-7, -2), Vector2(7, -2), Vector2(-14, -2), Vector2(4, -2), Vector2(-7, -2), Vector2(7, -2), Vector2(-14, -2), Vector2(4, -2), Vector2(-7, -2), Vector2(7, -2), Vector2(-14, -2), Vector2(8, -2), Vector2(0, -2)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../BottomSprite:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.133333, 0.266667, 0.408333, 0.533333, 0.766667, 0.966667, 1.04167, 1.43333, 1.86667, 2.2, 2.66667, 3.06667, 3.3),
"transitions": PackedFloat32Array(3.03143, 3.03143, 3.03143, 3.03143, 3.03143, 3.03143, 3.03143, 3.03143, 3.03143, 3.03143, 3.03143, 3.03143, 3.03143, 3.03143),
"update": 0,
"values": [Vector2(0, 22), Vector2(-7, 22), Vector2(7, 22), Vector2(-14, 22), Vector2(4, 22), Vector2(-7, 22), Vector2(7, 22), Vector2(-14, 22), Vector2(4, 22), Vector2(-7, 22), Vector2(7, 22), Vector2(-14, 22), Vector2(8, 22), Vector2(0, 22)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../Sky:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 800)]
}
tracks/5/type = "audio"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../RocketEnd1")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("10_r2cai")
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("9_75gv5")
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("9_r2cai")
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("10_r2cai")
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("12_mlpri")
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("14_vssyy")
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("15_6lb6g")
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("17_3tcmy")
}],
"times": PackedFloat32Array(0.333333, 1.5, 2.86667, 3.03333, 6.2, 7, 7.25, 18.75)
}
tracks/5/use_blend = true
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("../Mouse:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 7),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("../Mouse:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 1.25, 2.5, 3.77, 6.99824, 7.24167, 8.25, 9.5, 10.75, 12, 13.25, 14.5, 15.75, 17, 18.25),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, -88), Vector2(-128, 0), Vector2(88, 0), Vector2(128, 24), Vector2(16, 24), Vector2(16, 24), Vector2(128, 24), Vector2(0, -88), Vector2(-128, 24), Vector2(0, 88), Vector2(128, 24), Vector2(0, -88), Vector2(-128, 0), Vector2(0, 88), Vector2(128, 24)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("../Mouse:rotation")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0, 6.99824, 7.25, 7.73333, 8.25, 8.75, 9.25, 9.75, 10.25, 10.75, 11.25, 11.75, 12.25, 12.75, 13.25, 13.75, 14.25, 14.75, 15.25, 15.75, 16.25, 16.75, 17.25, 17.75, 18.25),
"transitions": PackedFloat32Array(0.75, 1, 0.75, 0.75, 0.75, 0.75, 0.75, 0.75, 0.75, 0.75, 0.75, 0.75, 0.75, 0.75, 0.75, 0.75, 0.75, 0.75, 0.75, 0.75, 0.75, 0.75, 0.75, 0.75, 0.75),
"update": 0,
"values": [0.324631, 0.0, 0.0, 0.314159, -0.349066, 0.349066, -0.349066, 0.324631, -0.349066, 0.349066, -0.349066, 0.324631, -0.349066, 0.349066, -0.349066, 0.324631, -0.349066, 0.349066, -0.349066, 0.324631, -0.349066, 0.349066, -0.349066, 0.324631, 0.0]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("../MouseFlag:visible")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0, 18.75),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/10/type = "method"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("../MouseFlag")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(18.75),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [&"default"],
"method": &"play"
}]
}

[sub_resource type="Animation" id="Animation_pm1ds"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Moon:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -1200)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../TopSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -38)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../BodySprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -2)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../BottomSprite:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 22)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../Sky:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../Mouse:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("../Mouse:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(16, 24)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("../Mouse:rotation")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("../MouseFlag:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_o45b7"]
_data = {
&"MoonLanding": SubResource("Animation_om7e8"),
&"RESET": SubResource("Animation_pm1ds")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_om7e8"]
animation = &"MoonLanding"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_pm1ds"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_o45b7"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_75gv5"]
states/MoonLanding/node = SubResource("AnimationNodeAnimation_om7e8")
states/MoonLanding/position = Vector2(489, 53)
transitions = ["Start", "MoonLanding", SubResource("AnimationNodeStateMachineTransition_pm1ds"), "MoonLanding", "End", SubResource("AnimationNodeStateMachineTransition_o45b7")]

[node name="Rocket" type="CharacterBody2D"]
texture_filter = 1
script = ExtResource("2")

[node name="RocketArea" type="Area2D" parent="."]

[node name="RocketAreaCollision" type="CollisionShape2D" parent="RocketArea"]
shape = SubResource("1")

[node name="RocketParticles" type="GPUParticles2D" parent="."]
position = Vector2(0, 22)
emitting = false
amount = 256
lifetime = 10.0
one_shot = true
preprocess = 1.55
explosiveness = 0.3
randomness = 0.57
process_material = SubResource("2")

[node name="RocketParticles2" type="GPUParticles2D" parent="."]
position = Vector2(0, 22)
emitting = false
amount = 256
lifetime = 10.0
one_shot = true
preprocess = 1.55
explosiveness = 0.3
randomness = 0.57
process_material = SubResource("2")

[node name="Sky" type="Sprite2D" parent="."]
visible = false
texture_filter = 1
texture = ExtResource("8_pm1ds")

[node name="Sky" type="Sprite2D" parent="Sky"]
texture_filter = 1
position = Vector2(0, -2160)
texture = ExtResource("8_pm1ds")

[node name="Moon" type="Sprite2D" parent="."]
visible = false
texture_filter = 1
position = Vector2(0, -1200)
scale = Vector2(4, 4)
texture = ExtResource("7_om7e8")

[node name="TopSprite" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(0, -38)
scale = Vector2(4, 4)

[node name="BodySprite" type="Sprite2D" parent="."]
position = Vector2(0, -2)
scale = Vector2(4, 4)

[node name="BottomSprite" type="Sprite2D" parent="."]
position = Vector2(0, 22)
scale = Vector2(4, 4)

[node name="RocketCollision" type="CollisionShape2D" parent="."]
shape = SubResource("3")

[node name="RocketTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="Rocket" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5")
volume_db = -20.0
pitch_scale = 2.05

[node name="RocketLaunch" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6")
pitch_scale = 0.5

[node name="RocketExplodeParticles" type="GPUParticles2D" parent="."]
modulate = Color(1, 0.583333, 0, 1)
emitting = false
amount = 100
one_shot = true
explosiveness = 0.8
randomness = 0.65
trail_sections = 2
trail_section_subdivisions = 1
process_material = SubResource("ParticleProcessMaterial_giiy7")

[node name="RocketExplodeParticles2" type="GPUParticles2D" parent="."]
modulate = Color(1, 0.583333, 0, 1)
emitting = false
amount = 100
one_shot = true
explosiveness = 0.8
randomness = 0.65
trail_sections = 2
trail_section_subdivisions = 1
process_material = SubResource("ParticleProcessMaterial_giiy7")

[node name="RocketExplodeLow" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_o3vb1")

[node name="RocketExplodeMedium" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_x3o3d")

[node name="RocketExplodeHigh" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_xxx01")

[node name="RocketSoundTimer" type="Timer" parent="."]
wait_time = 5.25
one_shot = true

[node name="Mouse" type="Sprite2D" parent="."]
visible = false
texture_filter = 1
position = Vector2(16, 24)
scale = Vector2(8, 8)
texture = ExtResource("9_u5xov")

[node name="MouseFlag" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(200, -16)
scale = Vector2(8, 8)
sprite_frames = SubResource("SpriteFrames_qyk71")
frame = 3
speed_scale = 0.5

[node name="AnimationEnding" type="Node2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="AnimationEnding"]
libraries = {
&"": SubResource("AnimationLibrary_o45b7")
}

[node name="AnimationTree" type="AnimationTree" parent="AnimationEnding"]
tree_root = SubResource("AnimationNodeStateMachine_75gv5")
anim_player = NodePath("../AnimationPlayer")

[node name="RocketEnd1" type="AudioStreamPlayer" parent="."]

[connection signal="finished" from="RocketParticles" to="." method="_on_rocket_particles_finished"]
[connection signal="finished" from="RocketParticles2" to="." method="_on_rocket_particles_finished"]
[connection signal="timeout" from="RocketTimer" to="." method="_on_RocketTimer_timeout"]
